2016-11-01  Per Bothner  <per@bothner.com>

	* style/docbook-to-html.xsl: Include 'part' (i.e. the Reference Manual)
	in navfooter.

	* kawa.texi (Source distribution): Document --with-domterm option.
	Update --with-jline2 options to --with-jline3.

2016-10-30  Per Bothner  <per@bothner.com>

	* kawa.texi (Prompts): Small enhancements.

2016-10-28  Per Bothner  <per@bothner.com>

	* kawa.texi (Composable pictures): Some small improvements.

2016-10-23  Sudarshan S Chawathe <chaw@eip10.org>

	* kawa.texi (Composable pictures): Various fixes.
	This fixes Savannah bug #49368
	"very minor typos etc. in (kawa pictures) documentation".

2016-10-16  Per Bothner  <per@bothner.com>

	* kawa.texi: Document need for running autogen.sh.
	* news.texi: Fix old typo.

2016-10-14  Sudarshan S Chawathe <chaw@eip10.org>
            Per Bothner  <per@bothner.com>

	* kawa.texi (Defining new classes): Fix typos.

2016-10-13  Per Bothner  <per@bothner.com>

	* kawa.texi: Document domterm-load-stylesheet. Other changes.

	* Makefile.am (MOSTLYCLEANFILES): Add some TeX temporaries.

	* kawa.texi: Multiple small improvements.
	* news.texi: Likewise.

2016-10-12  Per Bothner  <per@bothner.com>

	* kawa.texi (Pretty-printing): New section.
	* news.texi: Various updates.

2016-10-11  Per Bothner  <per@bothner.com>

	* kawa.texi (Tutorial - Picture): More fleshed out.

2016-10-05  Per Bothner  <per@bothner.com>

	* kawa.texi (Composable pictures): More text and examples.

2016-10-01  Per Bothner  <per@bothner.com>

	* kawa.texi (Composable pictures): Document procedures
	picture-write-svg and picture->svg-node.
	* kawa.texi: Add @contents for tex output.

2016-09-29  Per Bothner  <per@bothner.com>

	* kawa.texi (Composable pictures): Document Swing features.
	Document 'padding', 'image-write', and '->image'. Fix typos.

2016-09-28  Per Bothner  <per@bothner.com>

	* kawa.texi: More documentation of 'pictures' library.
	* images/*.png: More screenshots.
