@@ -7,8 +7,4 @@
 <xsl:param name="html.namespace">http://www.w3.org/1999/xhtml</xsl:param>
 <xsl:param name="html.script">style/utils.js</xsl:param>
 
-<xsl:template name="body.attributes">
-  <xsl:attribute name="onload">javascript:onLoadHandler();</xsl:attribute>
-  <xsl:attribute name="onunload">javascript:onUnloadHandler();</xsl:attribute>
-  </xsl:template>
 </xsl:stylesheet>
