@@ -26,7 +26,7 @@
     </script>
   </head>
   <frameset cols="280,*" onload="top.framesetLoaded()">
-    <frame name="slider" src="bk01-toc.xhtml">
+    <frame name="slider" src="ToC.xhtml">
     <frame name="main" src="index.xhtml">
   </frameset>
 </html>
